<resources>
    <string name="app_name">Calculator</string>
    <string name="simple_calc">Prosty Kalkulator</string>
    <string name="advance_calc">Zaawansowany kalkulator</string>
    <string name="exit">Zamknij</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minus">-</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="div">/</string>
    <string name="comma">,</string>
    <string name="_0">0</string>
    <string name="equals">=</string>
    <string name="mlt">*</string>
    <string name="wrong_equation">Wyrażenie niepoprawne</string>
    <string name="pow">x^2</string>
    <string name="bracket_1">(</string>
    <string name="bracket_2">)</string>
    <string name="del">C</string>
    <string name="sqrt">sqrt</string>
    <string name="powx">x^y</string>
    <string name="exp">exp</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tg">tg</string>
    <string name="ctg">ctg</string>
    <string name="cos_eq">cos(</string>
    <string name="sin_eq">sin(</string>
    <string name="tg_eq">tg(</string>
    <string name="ctg_eq">ctg(</string>
    <string name="pow_eq">^2</string>
    <string name="powx_eq">^</string>
    <string name="exp_eq">exp(</string>
    <string name="sqrt_eq">sqrt(</string>
</resources>
