<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.piotrek.calculator.SimpleActivity"
    android:gravity="center">

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_centerInParent="true"/>
    <Button
        android:id="@+id/btn_1"
        android:onClick="onClick"
        android:layout_below="@id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"/>
    <Button
        android:id="@+id/btn_2"
        android:onClick="onClick"
        android:layout_toEndOf="@id/btn_1"
        android:layout_below="@id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2"/>
    <Button
        android:id="@+id/btn_3"
        android:onClick="onClick"
        android:layout_toEndOf="@id/btn_2"
        android:layout_below="@id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_3"/>
    <Button
        android:id="@+id/btn_plus"
        android:onClick="onClick"
        android:layout_toEndOf="@id/btn_3"
        android:layout_below="@id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus"/>
    <Button
        android:id="@+id/btn_4"
        android:onClick="onClick"
        android:layout_below="@id/btn_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_4"/>
    <Button
        android:id="@+id/btn_5"
        android:onClick="onClick"
        android:layout_toEndOf="@id/btn_4"
        android:layout_below="@id/btn_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_5"/>
    <Button
        android:id="@+id/btn_6"
        android:onClick="onClick"
        android:layout_toEndOf="@id/btn_5"
        android:layout_below="@id/btn_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_6"/>
    <Button
        android:id="@+id/btn_minus"
        android:onClick="onClick"
        android:layout_toEndOf="@id/btn_6"
        android:layout_below="@id/btn_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minus"/>
    <Button
        android:id="@+id/btn_7"
        android:onClick="onClick"
        android:layout_below="@id/btn_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_7"/>
    <Button
        android:id="@+id/btn_8"
        android:onClick="onClick"
        android:layout_toEndOf="@id/btn_7"
        android:layout_below="@id/btn_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_8"/>
    <Button
        android:id="@+id/btn_9"
        android:onClick="onClick"
        android:layout_toEndOf="@id/btn_8"
        android:layout_below="@id/btn_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_9"/>
    <Button
        android:id="@+id/btn_div"
        android:onClick="onClick"
        android:layout_toEndOf="@id/btn_9"
        android:layout_below="@id/btn_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/div"/>
    <Button
        android:id="@+id/btn_comma"
        android:onClick="onClick"
        android:layout_below="@id/btn_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comma"/>
    <Button
        android:id="@+id/btn_zero"
        android:onClick="onClick"
        android:layout_toEndOf="@id/btn_comma"
        android:layout_below="@id/btn_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"/>
    <Button
        android:id="@+id/btn_eq"
        android:onClick="onEqualsClick"
        android:layout_toEndOf="@id/btn_zero"
        android:layout_below="@id/btn_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equals"/>
    <Button
        android:id="@+id/btn_mlt"
        android:onClick="onClick"
        android:layout_toEndOf="@id/btn_eq"
        android:layout_below="@id/btn_div"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mlt"/>

</RelativeLayout>
