<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context="com.example.piotrek.calculator.MainActivity">

    <Button
        android:id="@+id/simple_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/simple_calc" />

    <Button
        android:id="@+id/advance_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/simple_btn"
        android:layout_centerHorizontal="true"
        android:text="@string/advance_calc" />

    <Button
        android:id="@+id/exit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/advance_btn"
        android:layout_centerHorizontal="true"
        android:text="@string/exit" />

</RelativeLayout>
